--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,26 @@
-### IntelliJ IDEA ###
+# IDE and build files
 .idea/
+*.iml
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-.kotlin
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+build/
+*.class
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
+# VS Code
 .vscode/
 
-### Mac OS ###
+# OS files
 .DS_Store
+
+# Sensitive files
+*.db
+*.env
+*.log
+
+# JARs and dependencies
+*.jar
+lib/
+!lib/postgresql-*.jar
+
+# Test output
+/test-output/
